<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="services_lbl">Services</string>
    <string name="billing_lbl">Billing</string>
    <string name="messages_lbl">Messages</string>
    <string name="support_lbl">Support</string>
    <string name="more_lbl">More</string>
    <string name="terms_txt">*Assuming optimal network, equipment and customer device conditions. An Ethernet connection and at least one additional wired or wireless connection are required to reach total maximum download speeds of up to 1 Gbps for Ignite Internet Gigabits. See Acceptable User Policy at rogers.com/terms.</string>
</resources>